<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="16dp"
    android:baselineAligned="false"
    android:paddingTop="16dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.50"
        android:orientation="vertical">


        <TextView
            android:text="@string/player1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:id="@+id/textViewPlayerOneName" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/player_one_image"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/player3"
            android:id="@+id/imagePlayerOne" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/player_one_health"
            android:textSize="20dp"
            android:id="@+id/txtViewPlayerOneHealth"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_txt_punch"
            android:id="@+id/btnPlayerOnePunch"
            android:onClick="playerOnePunch" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_text_kick"
            android:id="@+id/btnPlayerOneKick"
            android:onClick="playerOneKick" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.50">


        <TextView
            android:text="@string/player2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:id="@+id/textViewPlayerTwoName" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/player2"
            android:contentDescription="@string/player_two_image"
            android:id="@+id/imagePlayerTwo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/player_two_health"
            android:textSize="20dp"
            android:id="@+id/txtViewPlayerTwoHealth"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_txt_punch"
            android:id="@+id/btnPlayerTwoPunch"
            android:onClick="playerTwoPunch" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_text_kick"
            android:id="@+id/btnPlayerTwoKick"
            android:onClick="playerTwoKick" />
    </LinearLayout>
</LinearLayout>
